<resources>
    <string name="app_name">ModernLogin</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="name">Name</string>

    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="todo">TODO</string>

    <!--for facebook login-->

    <!--facebook login ends-->

    <!--error messages-->

</resources>
